--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
@@ -8,8 +8,8 @@
 				<span class="query-builder-heading col-md-12">QUERY BUILDER</span>
 			</div>
 			<div class="row">
-				<!--span class="query-name col-md-8">Query Name</span-->
-				<!--a href="{{advancedSearchLink}}" target="_blank" class="advanced-search-btn col-md-4 right">Advanced Search</a-->
+				<span class="query-name col-md-8">&nbsp;&nbsp;</span>
+				<a href="{{advancedSearchLink}}" target="_blank" class="advanced-search-btn col-md-4 right">Advanced Search</a>
 			</div>
 			<ul class="container" id="filter-list"></ul>
 		</div>
