Modify display labels and style sheet on hpds ui

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenu.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenu.hbs
@@ -23,9 +23,9 @@
                     <span class="glyphicon glyphicon-chevron-down blue"></span>
                 </button>
                 <ul class="value-dropdown-menu dropdown-menu" aria-labelledby="value-operator-btn">
-                    <li><a class="dropdown-item" href="#" value="LT">Less than</a></li>
+                    <li><a class="dropdown-item" href="#" value="LT">Less than or equal to</a></li>
                     <li><a class="dropdown-item" href="#" value="BETWEEN">Between</a></li>
-                    <li><a class="dropdown-item" href="#" value="GT">Greater than</a></li>
+                    <li><a class="dropdown-item" href="#" value="GT">Greater than or equal to</a></li>
                 </ul>
             </div>
         </div>
