updates to default behavior of filters, categorical always assumes any value, continuous always assumes the user wants to specify a less than constraint

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenu.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenu.hbs
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="constrain-search-button col-md-1">
-        <span class="glyphicon glyphicon-ok btn search-btn constrain-apply-btn"></span>
+        <span class="btn search-btn constrain-apply-btn">Run</span>
     </div>
     <div class="validation-message col-md-12" style="color:red;"></div>
 </div>
