moving search-help-tooltip to mainLayout.hbs because it relies on a modal to show the tooltip and there can be only one

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
@@ -11,6 +11,9 @@
 				<span class="query-name col-md-8">&nbsp;&nbsp;</span>
 				<a href="{{advancedSearchLink}}" target="_blank" class="advanced-search-btn col-md-4 right">Advanced Search</a>
 			</div>
+			<div class="search-tooltip-help col-md-2">
+            </div>
+            
 			<ul class="container" id="filter-list"></ul>
 		</div>
 		<div id="query-results" class="col-md-4"></div>
