Fix back button to re-run the initial query istead of trying to re-render

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenu.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenu.hbs
@@ -2,7 +2,7 @@
     <div class="col-md-6  value-operator-range-label {{#unless constrainByValue}}hidden{{/unless}}">value range, min: {{metadata.min}} - max: {{metadata.max}}</div>
 
  <div class="constrain-search-button col-md-1">
-        <span class="btn search-btn constrain-apply-btn">Run</span>
+        <span class="btn constrain-apply-btn">Run</span>
     </div>
 </div>
 
