--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenuCategories.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenuCategories.hbs
@@ -8,7 +8,7 @@
 		</select>
 	</div>
 	 <div class="constrain-search-button">
-            <span class="btn search-btn constrain-apply-btn">Run</span>
+            <span class="btn constrain-apply-btn">Run</span>
          </div>
 
     </div>
