--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenuGenetics.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenuGenetics.hbs
@@ -14,7 +14,7 @@
         </div>
     </div>
      <div class="constrain-search-button col-md-1">
-        <span class="btn search-btn constrain-apply-btn">Run</span>
+        <span class="btn constrain-apply-btn">Run</span>
     </div>
     <div class="validation-message col-md-12"></div>
 </div>
