--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
@@ -1,5 +1,5 @@
 <div class="row header-row">
-	<a href="/picsureui/"><img class="logo-img col-md-4" src="{{logoPath}}"></a>
+	<a class="col-md-4" href="/picsureui/"><img class="logo-img" src="{{logoPath}}"></a>
 	<a class="col-md-2 btn btn-default header-btn active">Query Builder</a>
     <a class="col-md-2 btn btn-default header-btn" id="admin-btn" href="/psamaui/userManagement"
        style="display:none">Admin
