always have filter by value selected by default

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenuCategories.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenuCategories.hbs
@@ -3,7 +3,7 @@
 	<div class="category-filter-restriction-container">
 		<select type="radio" class="form-control category-filter-restriction">
 			<option value="ANY">Allow Any Value (exclude missing data)</option>
-			<option value="RESTRICT" {{#if constrainValueOne.length}}selected{{/if}} {{#if metadata.values}}selected{{/if}}>Restrict By Value</option>
+			<option value="RESTRICT" selected>Restrict By Value</option>
 
 		</select>
 	</div>
