--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
@@ -9,7 +9,7 @@
     </a>
 
   <div class="col-md-1 dropdown btn btn-default header-btn" id="help-dropdown" >
-        <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help</span>
+        <span class="dropdown-toggle col-md-12" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help</span>
         <ul class="dropdown-menu" role="menu">
 	        <li class="dropdown"><a href="{{pdfLink}}">User Guide</a></li>
             <li class="dropdown"><a href="{{helpLink}}">Contact Us</a></li>
