escaping html content in links to allow more flexibility

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
@@ -11,8 +11,8 @@
   <div class="col-md-1 dropdown btn btn-default header-btn" id="help-dropdown" >
         <span class="dropdown-toggle col-md-12" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help</span>
         <ul class="dropdown-menu" role="menu">
-	        <li class="dropdown"><a href="{{pdfLink}}">User Guide</a></li>
-            <li class="dropdown"><a href="{{helpLink}}">Contact Us</a></li>
+	        <li class="dropdown"><a href="{{{pdfLink}}}">User Guide</a></li>
+            <li class="dropdown"><a href="{{{helpLink}}}">Contact Us</a></li>
     </div>
 	<a id="logout-btn" class="col-md-1 btn btn-default header-btn">Log Out</a>
 </div>
