add div for results panel & improve formatting.  bump jquery maven dependency to 3.5.0

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -581,3 +581,11 @@ body {
 	float:right;
 	margin-right: 100px;
 }
+
+.results-div {
+    position: sticky;
+    bottom: 25;
+    padding: 5;
+    padding-bottom: 25;
+    background-color: #f4f4f6;
+}
