--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/noResults.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/noResults.hbs
@@ -1,6 +1,6 @@
 <div class="filter-result-entry">
   <br></br>
   <div>
-    <span class="autocomplete-term">No Results Found</span>
+    <span class="medium">No Results Found</span>
   </div>
 </div>
