Update bootstrap nav tab set up to include distinct IDs for each filter

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
@@ -1,4 +1,4 @@
-<div class="filter-row container">
+<div id="{{filterId}}" class="filter-row container">
 	<div class="filter-search-row row">
         <div class="filter-edit">
             <div class="filter-qualifier col-md-3">
