--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/searchResultTabs.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/searchResultTabs.hbs
@@ -2,7 +2,7 @@
     <ul class="nav nav-pills">
     	
         {{#each aliases}}
-	        <li data-toggle="tooltip" id="{{this}}-pill"><a data-target="#{{../filterId}}  #{{this}}" data-toggle="tab" aria-expanded="true">{{this}}</a></li>
+	        <li data-toggle="tooltip"  title="{{description}}" id="{{this}}-pill"><a data-target="#{{../filterId}}  #{{this}}" data-toggle="tab" aria-expanded="true">{{this}}</a></li>
         {{/each}}
     </ul>
 
