Add JQuery as an explicit dependency to all files where referenced, and a few extras (overrides, etc.) where it may be ussful.
Also removed a few unused imports.

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenu.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenu.hbs
@@ -9,7 +9,7 @@
 <div class="constrain-row row">
     <div class="constrain-filter-btn">
 	  <select class="form-control constrain-type-select" >
-	    <option  {{#unless constrainByValue}}selected{{/unless}} >No value</option>
+	    <option  {{#unless constrainByValue}}selected{{/unless}} >Any value</option>
 	    <option {{#if constrainByValue}}selected{{/if}}>By numeric value</option>
 	  </select>
           <select class="form-control value-type-select value-operator  {{#unless constrainByValue}}hidden{{/unless}}" >
