some UI tweaks for better display, plus fix a possible null issue

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenuVariantInfoNumeric.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/constrainFilterMenuVariantInfoNumeric.hbs
@@ -1,12 +1,27 @@
 <div class="constrain-row row">
-    <div class="col-md-4 constrain-filter-btn">
-    </div>
         <div class="checkbox-list">
-            <label>Min</label><input class="constrain-value constrain-value-one form-control" value="{{constrainValueOne}}" type="number"></input><span class="value-range-hint">(default : {{metadata.min}})</span><br>
-            <label>Max</label><input class="constrain-value constrain-value-two form-control" value="{{constrainValueTwo}}" type="number"></input><span class="value-range-hint">(default : {{metadata.max}})</span>
+          <div class="col-md-1 numeric-label">
+            	<label>Min: </label>
+            </div>
+            <div class="col-md-1 constrain-filter-input">
+            	<input class="constrain-value constrain-value-one form-control" value="{{constrainValueOne}}" type="number"></input>
+            	{{#if metadata.min}}<span class="value-range-hint">(default : {{metadata.min}})</span>{{/if}}
+            </div>
+            <div class="col-md-1">
+           	 	<span class="glyphicon glyphicon-minus constrain-range-separator numeric-separator"></span>
+       	 	</div>
+            <div class="col-md-1 numeric-label">
+            	<label>Max: </label>
+        	</div>
+            <div class="col-md-1 constrain-filter-input">
+            	<input class="constrain-value constrain-value-two form-control" value="{{constrainValueTwo}}" type="number"></input>
+            	{{#if metadata.max}}<span class="value-range-hint">(default : {{metadata.max}})</span>{{/if}}
+        	</div>
+        	
+        	 <div class="constrain-search-button col-md-1">
+		        <span class="btn constrain-apply-btn">Run</span>
+		    </div>
         </div>
-    <div class="constrain-search-button col-md-1">
-        <span class="btn constrain-apply-btn">Run</span>
-    </div>
     <div class="validation-message col-md-12"></div>
 </div>
+
