--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -578,3 +578,12 @@ body {
 	float:right;
 	margin-right: 100px;
 }
+
+.numeric-label {
+	padding-top: 10px;
+}
+
+.numeric-separator {
+	width: 100%;	
+    text-align: center;
+}
