Update modal help function to play nice with variant explorer modal

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/common/mainLayout.hbs
@@ -22,8 +22,7 @@
 			<div class="row">
 				<span class="query-name col-md-11">&nbsp;&nbsp;</span>
 				{{#if advancedSearchLink}}<a href="{{advancedSearchLink}}" target="_blank" class="advanced-search-btn right">Advanced Search</a>{{/if}}
-				<div class="search-tooltip-help col-md-1">
-			</div>
+				<div id="modal-window"></div>
             </div>
 			<ul class="container" id="filter-list"></ul>
 		</div>
