--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/filter.hbs
@@ -4,7 +4,7 @@
             <div class="filter-qualifier col-md-3">
             </div>
             <div class="filter-search-box col-md-7">
-			<i class="btn glyphicon glyphicon-info-sign search-tooltip-help-icon" data-toggle="modal" data-target="#search-help-modal"></i>
+			<i class="btn glyphicon glyphicon-info-sign search-tooltip-help-icon show-help-modal"></i>
                 <input class="search-box form-control" placeholder="Search..." value="{{searchValue}}"></input>
                 
             </div>
