--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/searchHelpTooltip.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/filter/searchHelpTooltip.hbs
@@ -1,12 +1,10 @@
-<div class="modal fade" id="search-help-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+<div class="modal" id="search-help-modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Instructions:</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Instructions</h4>
+            </div>
       <div class="modal-body">
       	<h2>Welcome to the PIC-SURE UI!</h2>
       	<p>This app is intended to work as closely as possible to your favorite search engine. You can enter any search term and we will present you with a series of results that can be used to filter subsets of the data. There are many phenotypes in the system, try entering "asthma" and press enter. You will find several tabs of search results.</p>
@@ -22,7 +20,7 @@
       	</div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary close">Close</button>
       </div>
     </div>
   </div>
