styles update for modal fix

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/styles.css
@@ -591,3 +591,12 @@ body {
 	width: 100%;	
     text-align: center;
 }
+
+.modal {
+	max-height: 100%;
+	overflow-y: auto;
+}
+
+.modal-body {
+	overflow-x: scroll;
+}
