ALS-1636: User Profile button now opens modal, removed query builder redirect to /picsureui

--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
@@ -38,6 +38,6 @@
             {{#if helpLink}}<li class="dropdown"><a href="{{{helpLink}}}">Contact Us</a></li>{{/if}}
     </div>
 
-    <a id="user-profile-btn" class="col-md-1 btn btn-default header-btn" href="/psamaui/userProfile" style="display: none;">User Profile</a>
+    <a id="user-profile-btn" class="col-md-1 btn btn-default header-btn" href="#" style="display: none;">User Profile</a>
     <a id="logout-btn" class="col-md-1 btn btn-default header-btn" style="display: none;">Log Out</a>
 </div>
