--- a/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
+++ b/pic-sure-hpds-ui/src/main/webapp/picsureui/header/header.hbs
@@ -1,7 +1,5 @@
 <div class="row header-row">
 	<img class="logo-img col-md-4" src="{{logoPath}}"></a>
-	<div class="logo-img col-md-3"
-         {{#not_contains privileges 'ADMIN'}}style="display: none;"{{/not_contains}}>Management console</div>
 </div>
 <div class="row" style="margin-bottom: 5px">
     <span class="col-md-2"></span>
@@ -16,7 +14,7 @@
     </div>
     {{/not_empty}}
 
-    <div class="col-md-2 dropdown btn btn-default header-btn" id="super-admin-dropdown"  {{#not_contains privileges 'SUPER_ADMIN'}}style="display: none;"{{/not_contains}}>
+    <div class="col-md-2 dropdown btn btn-default header-btn super-admin-visible" id="super-admin-dropdown"  {{#not_contains privileges 'SUPER_ADMIN'}}style="display: none;"{{/not_contains}}>
         <span class="dropdown-toggle col-md-12" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Super Admin Console</span>
         <ul class="dropdown-menu" role="menu">
             <li class="dropdown"><a id="appMgmt-super-admin" href="/psamaui/applicationManagement">Applications</a></li>
@@ -25,12 +23,12 @@
             <li class="dropdown"><a id="roleMgmt-super-admin" href="/psamaui/roleManagement">Roles</a></li>
         </ul>
     </div>
-    <a class="col-md-2 btn btn-default header-btn" href="/picsureui/queryBuilder" style="display: none;" id="query-builder-btn">Query Builder</a>
-    <a class="col-md-1 btn btn-default header-btn" id="admin-btn" href="/psamaui/userManagement"
+    <a class="col-md-2 btn btn-default header-btn authenticated-visible" href="/picsureui/queryBuilder" style="display: none;" id="query-builder-btn">Query Builder</a>
+    <a class="col-md-1 btn btn-default header-btn admin-visible" id="admin-btn" href="/psamaui/userManagement"
        {{#not_contains privileges 'ADMIN'}}style="display: none;"{{/not_contains}}>Users
     </a>
-    <a id="user-profile-btn" class="col-md-1 btn btn-default header-btn" href="#" style="display: none;">User Profile</a>
-    <div class="col-md-1 dropdown btn btn-default header-btn" id="help-dropdown" style="display: none;" >
+    <a id="user-profile-btn" class="col-md-1 btn btn-default header-btn authenticated-visible" href="#" style="display: none;">User Profile</a>
+    <div class="col-md-1 dropdown btn btn-default header-btn authenticated-visible" id="help-dropdown" style="display: none;" >
         <span class="dropdown-toggle col-md-12" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help</span>
         <ul class="dropdown-menu" role="menu">
          	{{#if videoLink}}<li class="dropdown"><a href="{{{videoLink}}}">Video Demonstration</a></li>{{/if}}
@@ -39,5 +37,5 @@
             {{#if helpLink}}<li class="dropdown"><a href="{{{helpLink}}}">Contact Us</a></li>{{/if}}
     </div>
 
-    <a id="logout-btn" class="col-md-1 btn btn-default header-btn" style="display: none;">Log Out</a>
+    <a id="logout-btn" class="col-md-1 btn btn-default header-btn authenticated-visible" style="display: none;">Log Out</a>
 </div>
